--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://192.168.219.103:1433;databaseName=pjt
-jdbc.username=hyuk
-jdbc.password=eunjincchus2
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.url=jdbc:oracle:thin:@172.17.210.171:12121/HAAIINT
+jdbc.username=BSMSOWN
+jdbc.password=henc_dev
